--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gulp": "^3.9.0",
     "gulp-ruby-sass": "^1.4.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-autoprefixer": "^3.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
